# harness

./: .gitignore  ARCHITECTURE.md  EVENTING.md  README.md  flake.nix  pyproject.toml
frontend/: app.js  index.html  styles.css
llm_harness/: __init__.py  __main__.py  api.py  api_plugin.py  builtin.py  config.py  plugins.py  protocols.py  toolsets.py
llm_harness/auth_plugins/: __init__.py  chatgpt_oauth.py  openai_codex_device.py  token_store.py
llm_harness/builtin_plugins/: llm_provider_runner.py  llm_run_requester.py  model_choice.py  tool_call_requester.py  tool_result_llm_requester.py
llm_harness/core/: __init__.py  consumer.py  events.py  types.py
llm_harness/providers/: __init__.py  chatgpt_codex.py  mock.py  openai_compatible.py
llm_harness/tools/: __init__.py  podman_shell.py
nix/: nixos-module.nix  podman-tool-image.nix
plugins/: __init__.py  llm_provider_runner.py  llm_run_requester.py
tests/: test_api_integration.py  test_chatgpt_codex_provider.py  test_chatgpt_oauth.py  test_config.py  test_core_types.py  test_events.py  test_llm_provider_runner.py  test_llm_run_requester.py  test_main.py  test_openai_codex_device.py  test_openai_compatible_provider.py  test_podman_shell_tool_consumer.py  test_store.py  test_tool_call_requester.py  test_tool_result_llm_requester.py
