[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-harness"
version = "0.1.0"
description = "Session-oriented LLM harness with event-driven plugin providers, tools, and streaming."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "httpx>=0.28",
  "pydantic>=2.8",
  "uvicorn[standard]>=0.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
llm-harness = "llm_harness.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["llm_harness"]
force-include = { "frontend" = "frontend" }

[project.entry-points."llm_harness.plugins"]
builtin = "llm_harness.builtin:register"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
